[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "linode_api4"
authors = [{ name = "Linode", email = "developers@linode.com" }]
description = "The official python SDK for Linode API v4"
readme = "README.rst"
requires-python = ">=3.8"
keywords = [
    "akamai",
    "Akamai Connected Cloud",
    "linode",
    "cloud",
    "SDK",
    "Linode APIv4",
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["requests", "polling"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["tox"]

[project.urls]
Homepage = "https://github.com/linode/linode_api4-python"
Documentation = "https://linode-api4.readthedocs.io/"
Repository = "https://github.com/linode/linode_api4-python.git"

[tool.setuptools.dynamic]
version = { attr = "linode_api4.version.__version__" }

[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'test', 'test.*']

[tool.isort]
profile = "black"
line_length = 80

[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.autoflake]
expand-star-imports = true
ignore-init-module-imports = true
ignore-pass-after-docstring = true
in-place = true
recursive = true
remove-all-unused-imports = false
remove-duplicate-keys = false
